AWS-EKS-deploy/temp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spina
  template:
    metadata:
      labels:
        app: spina
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: spina
          image: "339713101899.dkr.ecr.us-east-1.amazonaws.com/spina:latest"
          ports:
            - containerPort: 3000
