AWS-EKS-deploy/spina-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spina-service
  namespace: default
spec:
  selector:
    app: spina
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
