AWS-EKS-deploy/spina-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spina-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: spina-service
                port:
                  number: 3000
